--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.24.0"
+    "react-hook-form": "^7.52.0",
+    "react-router-dom": "^6.24.0",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.12.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
