--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.0",
     "react-router-dom": "^6.24.0",
+    "react-scroll-view": "^0.6.0",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.12.1"
   },
