basic viewrecord page

--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -23,5 +23,5 @@ dist-ssr
 *.sln
 *.sw?
 
-src/components/PatientCard
-src/components/ViewRecord
+# src/components/PatientCard
+# src/components/ViewRecord
